--- a/fms-backend/Dockerfile
+++ b/fms-backend/Dockerfile
@@ -23,7 +23,7 @@ pip install -r requirements.txt --no-cache
 find /usr/local/lib -type d -name __pycache__ -exec rm -r {} +
 EOF
 
-COPY ./dapp.py ./arena.py ./BattleManager.py .
+COPY ./dapp.py ./MatchManager.py .
 
 ENV ROLLUP_HTTP_SERVER_URL="http://127.0.0.1:5004"
 
